tests/NormalTests/paczka1/small_fuzzy/95340003.err
Error in line 3: dBkQZF S837 17,6
Error in line 4: oToBf S837 33,3
